--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,32 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.ant-spin .ant-spin-dot-holder {
+  color: red;
+}
+
+.ant-pagination .ant-pagination-item-active {
+  border-color: red;
+  border-radius: 5px;
+  border-width: 2px;
+}
+
+.ant-pagination .ant-pagination-item-active a {
+  color: black;
+}
+
+.ant-spin-dot-item {
+  background-color: red;
 }
